--- a/todo/templates/todo/vue.html
+++ b/todo/templates/todo/vue.html
@@ -12,14 +12,15 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-6 shadow rounded-5 mx-auto">
-                <h3 class="text-center fw-bold font-monospace text-danger-emphasis">TODO APP</h3>
+                <h3 class="text-center fw-bold font-monospace text-danger-emphasis">Python APP</h3>
             </div>
         </div>
+
         <div class="row my-5">
             <div class="col-lg-6 shadow rounded mx-auto d-flex align-items-center">
                 <h5 class="fw-bold font-monospace text-danger-emphasis my-2">Try</h5>
-                <div class="col"></div> <button type="button" class="btn btn-info my-2" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">Add</button>
+                <div class="col"></div>
+                <button type="button" class="btn btn-info my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Add</button>
             </div>
         </div>
         <div class="row my-5">
@@ -43,18 +44,37 @@
                     </tbody>
                 </table>
             </div>
-        </div> <!-- Modal -->
+        </div>
+        <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1> <button type="button"
-                            class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Add your daley Training in python</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body"> ... </div>
-                    <div class="modal-footer"> <button type="button" class="btn btn-secondary"
-                            data-bs-dismiss="modal">Close</button> <button type="button" class="btn btn-primary">Save
-                            changes</button> </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                              <label for="exampleInputEmail1" class="form-label">ToDo</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              
+                            </div>
+                            <div class="mb-3">
+                              <label for="exampleInputPassword1" class="form-label">Notes</label>
+                              <textarea type="text" class="form-control" id="exampleInputPassword1"> </textarea>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Action</label>
+                                <textarea type="text" class="form-control" id="exampleInputPassword1"> </textarea>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-info my-2">Add</button>
+                            </div>
+                        </form>
+                    </div>
+                    
                 </div>
             </div>
         </div>
